--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,23 +1,94 @@
+spring:
+  profiles:
+    active: payment1
+---
 server:
   port: 8001
 
 spring:
+  profiles: payment1
   application:
     name: payment-service
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/microservice_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.njoy.springcloud.entities    # 所有Entity别名类所在包
+  type-aliases-package: com.njoy.springcloud.entities
 
 eureka:
+  instance:
+    instance-id: ${spring.profiles}
+    prefer-ip-address: false
+    lease-renewal-interval-in-seconds: 50
+    lease-expiration-duration-in-seconds: 100
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka1.com:7001/eureka,http://eureka2.com:7002/eureka
+      #defaultZone: http://eureka4.com:7004/eureka
+      defaultZone: http://eureka1.com:7001/eureka,http://eureka2.com:7002/eureka,http://eureka3.com:7003/eureka
+---
+server:
+  port: 8002
+
+spring:
+  profiles: payment2
+  application:
+    name: payment-service
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/microservice_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
+
+mybatis:
+  mapperLocations: classpath:mapper/*.xml
+  type-aliases-package: com.njoy.springcloud.entities
+
+eureka:
+  instance:
+    instance-id: ${spring.profiles}
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 50
+    lease-expiration-duration-in-seconds: 100
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka1.com:7001/eureka,http://eureka2.com:7002/eureka,http://eureka3.com:7003/eureka
+---
+server:
+  port: 8003
+
+spring:
+  profiles: payment3
+  application:
+    name: payment-service
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/microservice_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
+
+mybatis:
+  mapperLocations: classpath:mapper/*.xml
+  type-aliases-package: com.njoy.springcloud.entities
+
+eureka:
+  instance:
+    instance-id: ${spring.profiles}
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 50
+    lease-expiration-duration-in-seconds: 100
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka1.com:7001/eureka,http://eureka2.com:7002/eureka,http://eureka3.com:7003/eureka
