--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>order-service</module>
     <module>microservice-common</module>
       <module>eureka-server</module>
+      <module>eureka-server4</module>
   </modules>
 
   <properties>
