--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <module>microservice-common</module>
       <module>eureka-server</module>
       <module>eureka-server4</module>
+      <module>order-service-openfeign</module>
+      <module>gateway</module>
   </modules>
 
   <properties>
@@ -27,6 +29,8 @@
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+<!--    <projectreactor.netty.version>0.9.12.RELEASE</projectreactor.netty.version>-->
+<!--    <springframework.webflux.version>5.2.12.RELEASE</springframework.webflux.version>-->
   </properties>
 
   <dependencyManagement>
@@ -35,7 +39,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.3.2.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -86,6 +90,18 @@
         <version>${lombok.version}</version>
         <optional>true</optional>
       </dependency>
+<!--      &lt;!&ndash; https://mvnrepository.com/artifact/io.projectreactor.netty/reactor-netty&ndash;&gt;-->
+<!--      <dependency>-->
+<!--        <groupId>io.projectreactor.netty</groupId>-->
+<!--        <artifactId>reactor-netty</artifactId>-->
+<!--        <version>${projectreactor.netty.version}</version>-->
+<!--      </dependency>-->
+<!--      &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-webflux &ndash;&gt;-->
+<!--      <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-webflux</artifactId>-->
+<!--        <version>${springframework.webflux.version}</version>-->
+<!--      </dependency>-->
     </dependencies>
   </dependencyManagement>
 
