--- a/microservice-common/pom.xml
+++ b/microservice-common/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
