--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -13,7 +13,10 @@
 
     <dependencies>
 
-        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
