--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -20,6 +20,21 @@ spring:
           predicates:
             - Path=/order/get/**
             - After=2020-10-01T00:00:00+08:00[Asia/Shanghai]
+    config:
+      label: master
+      name: config
+      profile: dev
+      uri: http://config-center.com:7800
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: root
+    password: root
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   instance:
@@ -31,3 +46,11 @@ eureka:
     service-url:
       defaultZone: http://eureka1.com:7001/eureka
 
+management:
+  endpoint:
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: gateway
