--- a/.github/workflows/config-broadcast.yml
+++ b/.github/workflows/config-broadcast.yml
@@ -12,10 +12,5 @@ jobs:
 
     steps:
     - name: configuration broadcast to gateway 
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Octocat
       run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+        curl -X GET http://localhost:8011/send
