--- a/order-service-openfeign/pom.xml
+++ b/order-service-openfeign/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>order-service-openfeign</artifactId>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.27.0-GA</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
