--- a/payment-zookeeper/src/main/resources/application.yml
+++ b/payment-zookeeper/src/main/resources/application.yml
@@ -44,6 +44,11 @@ spring:
       username: 'root'
       password: '123456'
       database: 'admin'
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 ---
 server:
   port: 8006
@@ -63,3 +68,8 @@ spring:
       username: 'root'
       password: '123456'
       database: 'admin'
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
