--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <junit.version>4.13.2</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <lombok.version>1.16.18</lombok.version>
-    <mysql.version>8.0.24</mysql.version>
+    <mysql.version>5.1.47</mysql.version> <!-- 更高版本可能有问题-->
     <mongo.version>2.4.5</mongo.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
